# libmrss

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  doxy.conf.in  mrss.pc.in
doc/: Makefile.am  main.doxy
phpmrss/: Makefile.am  README  all.php  config.m4  php.c  phpmrss_install.sh
src/: Makefile.am  mrss.h.in  mrss_download.c  mrss_edit.c  mrss_free.c  mrss_generic.c  mrss_internal.h  mrss_options.c  mrss_parser.c  mrss_search.c  mrss_write.c
test/: .gitignore  Makefile.am  new.c  parser.c  search.c  time.c  write.c
